# multi-agent-ecommerce

./: .env.ecom  .env.example  .gitignore  Makefile  README.md  TASK_MANIFEST.md  docker-compose.ecom.yml  docker-compose.yml
agent-orchestrator/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
agent-orchestrator/app/: main.py
agent-orchestrator/app/agents/: ad_manager.py  customer_service.py  data_analyst.py  front_desk.py  order_analyst.py  pmo.py  smart_rule.py
agent-orchestrator/app/api/: chat.py  health.py  tasks.py
agent-orchestrator/app/blackboard/: models.py  pg_store.py  redis_store.py  service.py
agent-orchestrator/app/config/: settings.py
agent-orchestrator/app/llm/: cost_tracker.py  models.py  router.py
agent-orchestrator/app/prompts/: ad_manager.py  customer_service.py  data_analyst.py  front_desk.py  order_analyst.py  pmo.py  smart_rule.py
agent-orchestrator/app/tools/: __init__.py  ad_tools.py  base.py  dashboard_tools.py  logistics_tools.py  order_tools.py  platform_tools.py  product_tools.py  rule_tools.py  shop_tools.py
agent-orchestrator/app/workflows/: main_workflow.py  pmo_workflow.py  state.py
agent-orchestrator/migrations/: 003_create_agent_tables.sql
agent-orchestrator/tests/: test_blackboard_service.py  test_json_parsing.py  test_settings.py
go-server/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
nginx/: ecom.conf
python-worker/: .dockerignore  Dockerfile  main.py  requirements.txt
scripts/: deploy-ecom.sh  setup-docker-mirror.sh
web-frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  (+3 more)
(+58 files in other folders)
